[package]
name = "test-rust-qr-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bardecoder = "0.3"
image = "0.23"
base45 = "3.0"
compress = "0.2"
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }